[gd_scene load_steps=6 format=2]

[ext_resource path="res://cow/milk_source.gd" type="Script" id=1]

[sub_resource type="Curve" id=1]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.0154082, 1 ), 0.0, 12.2734, 0, 0, Vector2( 1, 0.414062 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]

flags = 4
width = 2048
curve = SubResource( 1 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 5
emission_shape = 2
emission_box_extents = Vector3( 2, 1, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 2.0
scale_random = 0.5
scale_curve = SubResource( 2 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Emission Shape", "Scale", "Trail" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 6.71776, 114.126 )

[node name="milk_source" type="Particles2D"]

position = Vector2( 22.975, 55.8778 )
emitting = false
amount = 600
lifetime = 2.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.2
randomness = 0.1
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 3 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Process Material", "Time" ]

[node name="area" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="shape" type="CollisionShape2D" parent="area" index="0"]

position = Vector2( 0, 118.714 )
shape = SubResource( 4 )

[node name="timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]

[connection signal="area_exited" from="area" to="." method="_on_area_area_exited"]

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]


